add project table

--- a/MST/appsettings.json
+++ b/MST/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-BP1AD2A;Database=MST;User Id=sa;Password=nTa#102186;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-BP1AD2A;Database=MST_Pro;User Id=sa;Password=nTa#102186;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "EmailSetting": {
