Add Project Table

--- a/MST/appsettings.json
+++ b/MST/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "MST.Controllers.ProjectController": "Debug"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-BP1AD2A;Database=MST_Pro;User Id=sa;Password=nTa#102186;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-BP1AD2A;Database=MST_Pro;User Id=sa;Password=nTa#102186;TrustServerCertificate=True;MultipleActiveResultSets=true;Trusted_Connection=True;"
   },
   "AllowedHosts": "*",
   "EmailSetting": {
